# src/subscription/subscription-routes.js
@@ -2,5 +2,9 @@ module.exports = app => {
     const subscription = require('./subscription-controller');
     const router = require('express').Router();
 
-    router.post("/subscription", subscription)
+    router.post("/subscription", subscription.subscription)
+
+
+    // -- To declare the prefix path of your API service
+    app.use("/Muscufit/api/v1", router);
 }
