# src/users/users-routes.js
@@ -1,12 +1,10 @@
 module.exports = app => {
-    const users = require('/users-controller');
+    const users = require('./users-controller');
     const router = require('express').Router();
 
-    router.get("/users-list", users.userList);
+    router.put("/users-update",users.usersUpdate)
 
-    router.put("/users-update",users)
-
-    router.delete("/users-delete",users)
+    router.delete("/users-delete",users.usersDelete)
 
     // -- To declare the prefix path of your API service
     app.use("/Muscufit/api/v1", router)
